--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "index"
   ],
-  "author": "madkey@sent.com",
+  "author": "Simon Gomes",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/simongcs/index-by/issues"
